WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44212
text/plain non-video files cause <video> to hang (while reading them?)
https://bugs.webkit.org/show_bug.cgi?id=44212
Summary
text/plain non-video files cause <video> to hang (while reading them?)
Ian 'Hixie' Hickson
Reported
2010-08-18 16:14:18 PDT
STEPS TO REPRODUCE: 1. Load
http://hixie.ch/tests/adhoc/html/video/002.html
2. Immediately interact with the page. ACTUAL RESULTS Can't do step 2. EXPECTED RESULTS No hanging. It works fine for shorter text/plain files (
http://hixie.ch/tests/adhoc/html/video/003.html
) so my guess is that it's blocking while downloading the whole file.
Attachments
Disable Text Components
(15.45 KB, patch)
2010-08-27 17:02 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2010-08-19 08:10:11 PDT
<
rdar://problem/6563117
>
Jer Noble
Comment 2
2010-08-27 17:02:17 PDT
Created
attachment 65790
[details]
Disable Text Components
Eric Seidel (no email)
Comment 3
2010-08-27 17:21:10 PDT
Attachment 65790
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/3877032
Eric Carlson
Comment 4
2010-08-27 17:37:40 PDT
Comment on
attachment 65790
[details]
Disable Text Components These changes look OK, but you forgot to regenerate the WebKitSystemInterface libraries. r=me with the missing libraries.
Jer Noble
Comment 5
2010-08-30 14:47:22 PDT
Committed
r66411
: <
http://trac.webkit.org/changeset/66411
>
Jer Noble
Comment 6
2010-08-30 15:26:50 PDT
Committed
r66415
:
http://trac.webkit.org/changeset/66415
Ryosuke Niwa
Comment 7
2010-08-30 17:11:27 PDT
http://trac.webkit.org/changeset/66418
seems to have caused 20+ files to fail on WebKit2: Tests that timed out: compositing/layers-inside-overflow-scroll.html stderr compositing/self-painting-layers2.html stderr compositing/self-painting-layers.html stderr compositing/geometry/clipped-video-controller.html stderr compositing/geometry/video-fixed-scrolling.html stderr compositing/geometry/video-opacity-overlay.html stderr compositing/overflow/overflow-compositing-descendant.html stderr compositing/overflow/scroll-ancestor-update.html stderr compositing/reflections/load-video-in-reflection.html stderr compositing/video/video-background-color.html stderr fast/dom/beforeload/remove-video-in-beforeload-listener.html stderr fast/js/cyclic-proto.html stderr fast/selectors/001.html stderr media/audio-constructor-preload.html stderr media/audio-constructor-src.html stderr media/audio-constructor.html stderr media/audio-controls-rendering.html stderr media/audio-data-url.html stderr media/audio-mpeg-supported.html stderr media/audio-only-video-intrinsic-size.html stderr My apologies if they are just flaky but I'm letting you know just in case.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug