2010-08-27  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        text/plain non-video files cause <video> to hang (while reading them?)
        https://bugs.webkit.org/show_bug.cgi?id=44212

        Add the new WebKitSystemInterface function WKQTMovieDisableComponent to
        the initialization routine.

        * WebCoreSupport/WebSystemInterface.mm:
        (InitWebCoreSystemInterface): Initialize WKQTMovieDisableComponent.
2010-08-27  Jer Noble  <jer.noble@apple.com>

        Reviewed by Eric Carlson.

        text/plain non-video files cause <video> to hang (while reading them?)
        https://bugs.webkit.org/show_bug.cgi?id=44212

        Disable all the QuickTime components which ingest .txt files.

        New tests:
        * http/tests/media/video-served-as-text.html: Added.
        * http/tests/media/text-served-as-text.html: Added.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::createQTMovie): Disable all four text
            'eat' components.
        * platform/mac/WebCoreSystemInterface.h: Add wkQTMovieDisableComponent.
        * platform/mac/WebCoreSystemInterface.mm: Add wkQTMovieDisableComponent.
2010-08-27  Jer Noble  <jer.noble@apple.com>

        Reviewed by Eric Carlson.

        text/plain non-video files cause <video> to hang (while reading them?)
        https://bugs.webkit.org/show_bug.cgi?id=44212

        Added two new tests: video-served-as-text.html and
        text-served-as-text.html.  The second checks that a text file does not
        generates an error when loaded by a <video> element. The first checks
        that media served as text/plain still loads without errors.

        * http/tests/media/resources/test.txt: Added.
        * http/tests/media/text-served-as-text-expected.txt: Added.
        * http/tests/media/text-served-as-text.html: Added.
        * http/tests/media/video-served-as-text-expected.txt: Added.
        * http/tests/media/video-served-as-text.html: Added.


Canonical link: https://commits.webkit.org/57175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66411 268f45cc-cd09-0410-ab3c-d52691b4dbfc